# resource-bookings

./: README.md  dev-setup.md  package-lock.json  package.json  rocket.config.js
crates/types/: Cargo.toml  README.md
crates/zome/: Cargo.toml  README.md
crates/zome/src/: bookable_resource.rs  booking.rs  booking_request.rs  booking_slot.rs  lib.rs  utils.rs
docs/: index.md
docs/_assets/: webmanifest.json
docs/_assets/_static/: custom-elements.json
docs/_data/: site.cjs
docs/guides/: index.md
docs/guides/Introduction/: architecture.md  motivation.md
docs/guides/backend/: types.md  zome.md
docs/guides/frontend/: elements.md  resource-service.md  resource-store.md
docs/guides/setting-up/: adding-the-frontend.md  adding-the-zome.md
tests/: package.json
tests/src/: index.ts
ui/: README.md  package.json
ui/demo/: index.html
ui/src/: config.ts  context.ts  index.ts  mocks.ts  resource-bookings-service.ts  resource-bookings-store.ts  types.ts
ui/src/elements/: book-resources.ts  create-bookable-resource.ts  manage-resources.ts  resource-bookings-timeline.ts
ui/test/: elements.test.js
ui/test/mocks/: index.js  resource.mock.js
workdir/dna/: dna.yaml
workdir/happ/: happ.yaml
